duicontrolpanel (0.8.10~unreleased) unstable; urgency=low

  * new version
  * Fixes: Avoid showing the briefview in two step in case the applet is
    already loaded
  * Fixes: declarative applet could not modify gconf keys

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 31 Aug 2010 12:04:09 +0200

duicontrolpanel (0.8.9) unstable; urgency=low

  * Optimization: filter out unnecessery languageChange events
  * Implements two-step applet loading: static content gets shown until
    the applet is not yet loaded
  * Fixes: NB#183938 - UI freeze when connectivity opened for the first
    time after device flash

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 24 Aug 2010 17:49:54 +0200

duicontrolpanel (0.8.8) unstable; urgency=low

  [ Robert Manner ]
  * Example update: Itemlike binaryplugin shows an example about how to load
    stylesheet for its widget

  [ Viktor Nagy ]
  * Fixes: NB#186249 - duicontrolpanel navigation within settings menus lower than the initial depth crashes MATTI

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Thu, 19 Aug 2010 16:30:45 +0200

duicontrolpanel (0.8.7) unstable; urgency=low

  * Fixes: NB#183023 - Settings page is displaying !! as prefix of Service
    accounts
  * Fixes: NB#178164 - The using AP is displayed inconsistently on
    Settings page
  * Implements support for the new applet briefwidget (switch type)
  * Fixes: if invoked by dbus, mainPage was shown for a sec

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 10 Aug 2010 15:27:20 +0200

duicontrolpanel (0.8.6) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#182605 - multiple instances of DCP can be opened at the
    same time

  [ Viktor Nagy ]
  * Redirect standard io channels of applications launched by
    control panel to /dev/null
    Fixes: NB#182372 - The script "/usr/share/csd-call/csd-call-backup" fails while taking backup

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Thu, 05 Aug 2010 15:59:40 +0200

duicontrolpanel (0.8.5) unstable; urgency=low