@@ -2,7 +2,7 @@ Source: duicontrolpanel
 Section: devel
 Priority: extra
 Maintainer: Robert Manner <robert.manner@blumsoft.eu>
-Build-Depends: debhelper (>= 5), libmeegotouch-dev (>= 0.20), doxygen, clean-device-dev
+Build-Depends: debhelper (>= 5), libmeegotouch-dev (>= 0.20), doxygen, clean-device-dev, aegis-builder
 Standards-Version: 3.7.2
 
 Package: libduicontrolpanel
