@@ -4,8 +4,9 @@ duicontrolpanel (0.8.10~unreleased) unstable; urgency=low
   * Fixes: Avoid showing the briefview in two step in case the applet is
     already loaded
   * Fixes: declarative applet could not modify gconf keys
+  * Adds credential for Cellular usage
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 31 Aug 2010 12:04:09 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 31 Aug 2010 16:25:57 +0200
 
 duicontrolpanel (0.8.9) unstable; urgency=low
 
